<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP140_AutoSequence_3" Id="{b7f58363-c2d8-4a71-b461-d7a00da189ab}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP140_AutoSequence_3
VAR
	OP140_AutoSeq_3:INT;

	OP140_STN_MOVER_3: INT;
	
	Leak3_FB: OP140_LeakTesting;
	LK3_TS1_Seq_Start: BOOL;
	LK3_TS1_Seq_Completed: BOOL;
	LK3_TS1_tst1_OK: BOOL;
	LK3_TS1_tst1_NOK: BOOL;
	LK3_TS1_tst2_OK: BOOL;
	LK3_TS1_tst2_NOK: BOOL;
	LK3_TS1_tst1_Result: STRING;
	LK3_TS1_tst2_Result: STRING;
	LK3_TS1_CompOK: BOOL;
	LK3_TS1_CompNOK: BOOL;	
	LK3_TS2_Seq_Start: BOOL;
	LK3_TS2_Seq_Completed: BOOL;
	LK3_TS2_tst1_OK: BOOL;
	LK3_TS2_tst1_NOK: BOOL;
	LK3_TS2_tst2_OK: BOOL;
	LK3_TS2_tst2_NOK: BOOL;
	LK3_TS2_tst1_Result: STRING;
	LK3_TS2_tst2_Result: STRING;
	LK3_TS2_CompOK: BOOL;
	LK3_TS2_CompNOK: BOOL;
	OP140_Leak3_TS2_result_OK: BOOL;
	OP140_Leak3_TS2_result_NOK: BOOL;
	OP140_Leak3_TS2_Result_Data: STRING;
	OP140_Stn_EnableTRIG: R_TRIG;
	OP140_DoneDly_3: TON;
	fix_rh_3: INT;
	fix_lh_3: INT;
	Dry_Run: BOOL;
	timeee: Ton;
END_VAR
VAR 
	OP140_Leak3_TS1_result_OK: BOOL;
	OP140_Leak3_TS1_Result_NOK: BOOL;
	OP140_Leak3_TS1_Result_Data: STRING;
	OP1140_LK3_LH_OK: BOOL;
	OP1140_LK3_LH_NOK: BOOL;
	OP1140_LK3_RH_OK: BOOL;
	OP1140_LK3_RH_NOK: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (NOT OP140_Auto OR  OP140_ErrorActive OR OP140_HomeRunning OR OP140_Machine_Stop ) THEN
	
	OP140_AutoRunning:= FALSE;
	OP140_ComponentOk:=FALSE;
	OP140_ComponentNok:=FALSE;
	OP140_AutoSeq_3:= 10;
	OP140_Leak3_Seq_Completed:=FALSE;
	OP140_Leak3_Seq_Start:=FALSE;
	OP140A3_Prev_LH_COMP_OK:=FALSE;
	OP140A3_Prev_RH_COMP_OK:=FALSE;
	OP140_ATEQ1_ResultOK :=FALSE;
	OP140_ATEQ1_ResultNOK :=FALSE;
	OP140_ATEQ4_ResultOK :=FALSE;
	OP140_ATEQ4_ResultNOK :=FALSE;
	
END_IF

CASE OP140_AutoSeq_3 OF 
	
	10:IF (OP140_Auto) THEN		// Check Automode Selected
		  OP140_AutoSeq_3 :=20;
	   END_IF
	   
	20:IF ( NOT OP140_ErrorActive) THEN		//Check No error
		  OP140_AutoSeq_3:=30;
	   END_IF
	   
	30:IF (NOT OP140_HomeRunning) THEN		//Check No Homerunning
		  OP140_AutoSeq_3 :=40;
	   END_IF
	   
    40:IF ( OP140_Temp_Home_Ok)THEN	//Check Machine in Home
		OP140_AutoSeq_3:= 50;
	   END_IF
		
	50:IF ( NOT OP140_OperationCompleted) AND NOT OP140_TOOL_CHANGE_MODE_SELECTED THEN		// Check Operation Completed Reset
		OP140_AutoSeq_3:=60;
		END_IF
		
	60:IF (NOT OP140_ComponentOk) THEN		// Check Component Ok Reset
		OP140_AutoSeq_3:=70;
	   END_IF
		
	70:IF (NOT OP140_ComponentNok) THEN 	// Check Component NOk Reset
		OP140_AutoSeq_3:= 120;
	   END_IF
		
    120:IF  ( OP140_HMI_Cycle_Start ) THEN		//Machine Start in Fully Automatic or Press Cycle Start For Semi Automatic
		     OP140_HomeConditionOK:=TRUE;
			 IF( OP140_HomeConditionOK AND OP140_AutoSelected) THEN
			    OP140_AutoRunning:=TRUE;
				OP140_StepRunning:= FALSE;
			 ELSIF ( OP140_HomeConditionOK AND OP140_StepSelected) THEN
					OP140_AutoRunning:=FALSE;
					OP140_StepRunning:= TRUE;
				END_IF;
		 END_IF
		 
		 IF ((OP140_AutoRunning OR OP140_StepRunning) AND OP140_StartEnable_1)AND  (OP140_DryRun OR OP140_HMI_Cycle_Start)   THEN
              OP140_AutoSeq_3:= 130;
		END_IF
		
	130:IF  OP140_STN_ENABLE_3 THEN 
 			OP140_AutoSeq_3:= 140;
			
		ELSIF NOT OP140_STN_ENABLE_3 AND  MOVER_POS_RECHED[OP140_STN_MOVER_3] AND fix_lh_3 <> 130 AND fix_rh_3 <> 130 THEN
				OP140_AutoSeq_3 := 200;
		END_IF
		
	140:    IF fix_lh_3 =130 AND fix_rh_3 =130 THEN
			   OP140A3_Prev_LH_COMP_OK := TRUE;
	           OP140A3_Prev_RH_COMP_OK := TRUE;
			   OP140_AutoSeq_3 := 150;
			   
			ELSIF fix_lh_3 =130 AND fix_rh_3 =131 THEN
				OP140A3_Prev_LH_COMP_OK := TRUE;
	            OP140A3_Prev_RH_COMP_OK := FALSE;
				OP140_AutoSeq_3 := 150;
				
			ELSIF fix_lh_3 =131 AND fix_rh_3 =130 THEN
				OP140A3_Prev_LH_COMP_OK := FALSE;
	            OP140A3_Prev_RH_COMP_OK :=TRUE ;
	            OP140_AutoSeq_3 := 150;
			END_IF
			

	150:IF OP140_StartEnable_3  THEN
		 OP140_Leak3_Seq_Start:=TRUE;	
		 OP140_AutoSeq_3:= 160;
		END_IF
		 
		 
	160:IF OP140_Leak3_Seq_Completed=TRUE AND In_Range(SR140_Vert_Servo_Ctrl_3.Actual_Position,40,1)  THEN
		  OP140A3_LH_Comp_OK:=OP1140_LK3_LH_OK;
		  OP140A3_LH_Comp_NOK:=OP1140_LK3_LH_NOK;
		  OP140A3_RH_Comp_OK:=OP1140_LK3_RH_OK;
		  OP140A3_RH_Comp_NOK:=OP1140_LK3_RH_NOK;
		  OP140_AutoSeq_3:= 170;		
	    END_IF
		OP140_P3_CURR_MVR 					:= OP140_STN_MOVER_3;
	170: IF OP140_DoneDly_3.q AND OP140_StartEnable THEN
		    IF OP140A3_LH_Comp_OK AND OP140A3_RH_Comp_OK THEN
		       MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]:=144;
		       MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]:=144;
		
		       IF MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]=144 AND MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]=144 THEN
				   STATION_DONE[OP140_P3_CURR_MVR][OP140_XTS_POS_NO]			:= TRUE;
				  OP140_AutoSeq_3:= 180;
		        END_IF 	
				
             ELSIF OP140A3_LH_Comp_NOK AND OP140A3_RH_Comp_NOK  THEN
				 MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]:=145;
		         MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]:=145;
		
		         IF MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]=145 AND MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]=145 THEN
				    STATION_DONE[OP140_P3_CURR_MVR][OP140_XTS_POS_NO]			:= TRUE;
				    OP140_AutoSeq_3:= 180;
		        END_IF 
				
             ELSIF OP140A3_LH_Comp_OK AND OP140A3_RH_Comp_NOK  THEN
				   MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]:=144;
		           MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]:=145;	
	
		         IF MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]=144 AND MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]=145 THEN
				  STATION_DONE[OP140_P3_CURR_MVR][OP140_XTS_POS_NO]			:= TRUE;
				    OP140_AutoSeq_3:= 180;
		        END_IF 	
				
			ELSIF OP140A3_LH_Comp_NOK AND OP140A3_RH_Comp_OK  THEN
				  MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]:=145;
		          MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]:=144;	
	
		         IF MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]=145 AND MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]=144 THEN
			STATION_DONE[OP140_P3_CURR_MVR][OP140_XTS_POS_NO]			:= TRUE;
				    OP140_AutoSeq_3:= 180;
		        END_IF 		
		    END_IF		
	     END_IF
	
	180:// Reset All Bits
		
 		OP140_Leak3_Seq_Completed:=FALSE;					
        OP140A3_LH_Comp_OK:=FALSE;
        OP140A3_LH_Comp_NOK:=FALSE;
        OP140A3_RH_Comp_OK:=FALSE;
        OP140A3_RH_Comp_NOK:=FALSE; 
		OP140_ATEQ1_ResultOK :=FALSE;
		OP140_ATEQ1_ResultNOK :=FALSE;
		OP140_ATEQ4_ResultOK :=FALSE;
		OP140_ATEQ4_ResultNOK :=FALSE;
		OP140_STN_ENABLE_3:=0;
		OP140_AutoSeq_3:= 130;	

	200:MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]:=140;
		MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]:=140;
		
		IF MOVER_CMP_STATUS[OP140_P3_CURR_MVR][1]=140 AND MOVER_CMP_STATUS[OP140_P3_CURR_MVR][2]=140 THEN
		 STATION_DONE[OP140_STN_MOVER_3][OP140_XTS_POS_NO]			:= TRUE;
		   OP140_AutoSeq_3:= 180;
		END_IF		

END_CASE

//Leak3FB

Leak3_FB(
	
	Horz_Cyl_Pos1                 := CR140_Horz_Cyl_3.Position1, 
	Horz_Cyl_Pos2                 :=CR140_Horz_Cyl_3.Position2 , 
	Vert_Cyl_Pos1                 := CR140_Vert_Cyl_3.Position1, 
	Vert_Cyl_Pos2                 := CR140_Vert_Cyl_3.Position2, 
	StartEnable                   :=OP140_StartEnable_3 , 
	Home_pos_IP                   :=OP140_HMI_Vert_Home_Pos , 
	Home_Vel_IP                   := OP140_HMI_Vert_Home_Vel, 
	SafeHome_Pos_IP               :=OP140_HMI_Vert_SafeHome_Pos,
	SafeHome_Vel_Ip               :=OP140_HMI_Vert_SafeHome_Vel,
	SafeWork_Pos_IP               :=OP140_HMI_Vert_SafeWork_Pos,
	SafeWork_Vel_IP               :=OP140_HMI_Vert1_SafeWork_Vel,
	Work_Pos_IP                   :=OP140_HMI_Vert3_Work_Pos , 
	Work_Vel_IP                   :=OP140_HMI_Vert3_Work_Vel , 
	Axis_In_WorkPos               :=SR140_Vert_Servo_Ctrl_3.Axis_In_Pos , 
	Axis_In_Home                  :=SR140_Vert_Servo_Ctrl_3.Axis_In_Home , 
	axis_in_position              :=SR140_Vert_Servo_Ctrl_3.Axis_In_Pos,
	servo_actual_pos              :=SR140_Vert_Servo_Ctrl_3.Actual_Position,	
	Prev_Stat_LH_OK               :=OP140A3_Prev_LH_COMP_OK , 
	Prev_Stat_RH_OK               :=OP140A3_Prev_RH_COMP_OK , 
	TS1_Test1_ProgNO              :=OP140_ATEQ_Test_Prog1_No , 
	TS1_Test2_ProgNO              :=OP140_ATEQ_Test_Prog2_No , 
	TS1_TestOk                    :=OP140_ATEQ1_ResultOK , 
	TS1_TestNOK                   :=OP140_ATEQ1_ResultNOK , 
	TS1_StartEnable               := OP140_StartEnable_3, 
	TS1_ResultIN                  := OP140_ATEQ1_Result , 
	TS2_Test1_ProgNO              :=OP140_ATEQ_Test_Prog1_No , 
	TS2_Test2_ProgNO              :=OP140_ATEQ_Test_Prog2_No , 
	TS2_TestOk                    :=OP140_ATEQ4_ResultOK , 
	TS2_TestNOK                   :=OP140_ATEQ4_ResultNOK , 
	TS2_StartEnable               :=OP140_StartEnable_3 , 
	TS2_ResultIN                  :=OP140_ATEQ4_Result , 
	Horz_Cyl_Auto1                =>CR140_Horz_Cyl_3.AutoCmd1 , 
	Horz_Cyl_Auto2                =>CR140_Horz_Cyl_3.AutoCmd2 , 
	Vert_Cyl_Auto1                =>CR140_Vert_Cyl_3.AutoCmd1 , 
	Vert_Cyl_Auto2                =>CR140_Vert_Cyl_3.AutoCmd2 , 
	Servo_Pos_Error               => , 
	Servo_HomePos_Error           => , 
	TS1_StartOP                   => OP140_ATEQ1_Auto_Start , 
	TS1_Test_ProgNO               => OP140_ATEQ1_Auto_Prog_No_out , 
	TS2_StartOP                   => OP140_ATEQ4_Auto_Start , 
	TS2_Test_ProgNO               => OP140_ATEQ4_Auto_Prog_No_out , 
	Seq_Start                     := OP140_Leak3_Seq_Start, 
	Seq_Completed                 := OP140_Leak3_Seq_Completed , 
	TS1_SeqStart                  := LK3_TS1_Seq_Start , 
	TS1_SeqCompleted              := LK3_TS1_Seq_Completed, 
	TS1_ATEQCompleted             := OP140_ATEQ1_ResultCompleted, 
	TS1_Test1OK                   := LK3_TS1_tst1_OK , 
	TS1_Test1NOK                  := LK3_TS1_tst1_NOK, 
	TS1_Test2Ok                   := LK3_TS1_tst2_OK , 
	TS1_Test2NOK                  := LK3_TS1_tst2_NOK , 
	TS1_Test1Result               := LK3_TS1_tst1_Result, 
	TS1_Test2Result               := LK3_TS1_tst2_Result , 
	TS1_CompOK                    := LK3_TS1_CompOK , 
	TS1_CompNOK                   := LK3_TS1_CompNOK, 
	TS1_ResultOK                  := OP140_Leak3_TS1_result_OK , 
	TS1_ResultNOK                 := OP140_Leak3_TS1_Result_NOK, 
	TS1_Result_Data               := OP140_Leak3_TS1_Result_Data , 
	LH_CompOK                     := OP1140_LK3_LH_OK , 
	LH_CompNOK                    := OP1140_LK3_LH_NOK , 
	RH_CompOK                     := OP1140_LK3_RH_OK , 
	RH_CompNOK                    := OP1140_LK3_RH_NOK , 
	TS2_SeqStart                  := LK3_TS2_Seq_Start , 
	TS2_SeqCompleted              := LK3_TS2_Seq_Completed , 
	TS2_ATEQCompleted             :=OP140_ATEQ4_ResultCompleted , 
	TS2_Test1OK                   :=LK3_TS2_tst1_OK , 
	TS2_Test1NOK                  :=LK3_TS2_tst1_NOK  , 
	TS2_Test2Ok                   :=LK3_TS2_tst2_OK , 
	TS2_Test2NOK                  :=LK3_TS2_tst2_NOK , 
	TS2_Test1Result               := LK3_TS2_tst1_Result , 
	TS2_Test2Result               :=LK3_TS2_tst2_Result , 
	TS2_CompOK                    :=LK3_TS2_CompOK , 
	TS2_CompNOK                   :=LK3_TS2_CompNOK , 
	TS2_ResultOK                  := OP140_Leak3_TS2_result_OK, 
	TS2_ResultNOK                 :=OP140_Leak3_TS2_result_NOK , 
	TS2_Result_Data               :=OP140_Leak3_TS2_Result_Data ,
    Servo_Pos_OP                  :=SR140_Vert_Servo_Ctrl_3.Position,
    Servo_Vel_OP                  :=SR140_Vert_Servo_Ctrl_3.Velocity,
    ABS_Move_Start                :=SR140_Vert_Servo_Ctrl_3.ABSmove_Start);

	
OP140_DoneDly_3(IN:=OP140_Leak3_Seq_Completed , PT:=T#500MS , Q=> , ET=> );
	
dry_run:=All_Station_Dry_Run;	
IF Dry_Run THEN
	fix_lh_3:=130;	
    fix_rh_3:=130;
ELSE
	fix_lh_3:=MOVER_CMP_STATUS[OP140_STN_MOVER_3][1];	
    fix_rh_3:=MOVER_CMP_STATUS[OP140_STN_MOVER_3][2];	
END_IF


//############################		OP140 STATION ENABLE CONDITION		##########################

	OP140_STN_MOVER_3					:= MOVER_POSITION[OP140_P3_XTS_POS_NO];
	
	IF AUTO_WITH_XTS THEN
	IF OP140_STN_MOVER_3>0 THEN	
	IF NOT(END_OF_CYCLE AND MOVER_CMP_STATUS[OP140_STN_MOVER_3][1]=5 AND MOVER_CMP_STATUS[OP140_STN_MOVER_3][2]=5)THEN
	OP140_STN_ENABLE_3					:= MOVER_POS_RECHED[OP140_STN_MOVER_3] AND ((MOVER_CMP_STATUS[OP140_STN_MOVER_3][1]=130)OR 
										(MOVER_CMP_STATUS[OP140_STN_MOVER_3][2]=130))AND STATION_ENABLE_CONTROL;	
	ELSE
	STATION_DONE[OP140_STN_MOVER_3][OP140_XTS_POS_NO]			:= TRUE;		
	END_IF
	ELSE
	OP140_STN_ENABLE_3					:= FALSE;
	END_IF
	END_IF																
 
	
	]]></ST>
    </Implementation>
    <LineIds Name="OP140_AutoSequence_3">
      <LineId Id="854" Count="0" />
      <LineId Id="1365" Count="0" />
      <LineId Id="855" Count="3" />
      <LineId Id="861" Count="3" />
      <LineId Id="1315" Count="4" />
      <LineId Id="865" Count="2" />
      <LineId Id="1366" Count="0" />
      <LineId Id="868" Count="2" />
      <LineId Id="1367" Count="0" />
      <LineId Id="871" Count="2" />
      <LineId Id="1368" Count="0" />
      <LineId Id="874" Count="2" />
      <LineId Id="1369" Count="0" />
      <LineId Id="877" Count="2" />
      <LineId Id="1370" Count="0" />
      <LineId Id="880" Count="2" />
      <LineId Id="1371" Count="0" />
      <LineId Id="883" Count="2" />
      <LineId Id="1372" Count="0" />
      <LineId Id="886" Count="2" />
      <LineId Id="1373" Count="0" />
      <LineId Id="889" Count="1" />
      <LineId Id="1374" Count="0" />
      <LineId Id="892" Count="1" />
      <LineId Id="895" Count="4" />
      <LineId Id="1375" Count="0" />
      <LineId Id="900" Count="2" />
      <LineId Id="1376" Count="0" />
      <LineId Id="903" Count="1" />
      <LineId Id="1377" Count="0" />
      <LineId Id="1117" Count="1" />
      <LineId Id="905" Count="2" />
      <LineId Id="911" Count="2" />
      <LineId Id="1378" Count="0" />
      <LineId Id="914" Count="3" />
      <LineId Id="1379" Count="0" />
      <LineId Id="918" Count="2" />
      <LineId Id="1119" Count="0" />
      <LineId Id="921" Count="2" />
      <LineId Id="928" Count="10" />
      <LineId Id="999" Count="3" />
      <LineId Id="943" Count="1" />
      <LineId Id="1063" Count="0" />
      <LineId Id="1062" Count="0" />
      <LineId Id="946" Count="7" />
      <LineId Id="1381" Count="0" />
      <LineId Id="954" Count="7" />
      <LineId Id="1382" Count="0" />
      <LineId Id="962" Count="0" />
      <LineId Id="1499" Count="0" />
      <LineId Id="964" Count="5" />
      <LineId Id="1383" Count="0" />
      <LineId Id="970" Count="13" />
      <LineId Id="1310" Count="3" />
      <LineId Id="986" Count="4" />
      <LineId Id="1384" Count="0" />
      <LineId Id="991" Count="4" />
      <LineId Id="103" Count="0" />
      <LineId Id="191" Count="3" />
      <LineId Id="1386" Count="0" />
      <LineId Id="195" Count="14" />
      <LineId Id="1262" Count="0" />
      <LineId Id="1264" Count="0" />
      <LineId Id="210" Count="17" />
      <LineId Id="231" Count="5" />
      <LineId Id="239" Count="37" />
      <LineId Id="445" Count="2" />
      <LineId Id="442" Count="0" />
      <LineId Id="1011" Count="5" />
      <LineId Id="443" Count="1" />
      <LineId Id="277" Count="0" />
      <LineId Id="1483" Count="15" />
      <LineId Id="347" Count="0" />
      <LineId Id="352" Count="0" />
      <LineId Id="433" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>